updated styling of temporal matching input field

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1043,7 +1043,7 @@ p-inputswitch.ng-dirty.ng-invalid > .p-inputswitch {
   border-top-left-radius: 0;
 }
 
-#fromDateInput .p-inputtext, #toDateInput .p-inputtext{
+#fromDateInput .p-inputtext, #toDateInput .p-inputtext, #windowSizeSelector .p-inputtext{
   border-left: none;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
