link to the user manual added to the admin panel so there is no need to do a deployment every time it gets updated

--- a/validator/templates/admin/system_settings.html
+++ b/validator/templates/admin/system_settings.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<link href="{% static 'css/service.css' %}" rel="stylesheet">
 
 <h1>System settings and status</h1>
 
