--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -100,8 +100,8 @@
         From 2021 on the application is also supported by the <a href="https://www.esa.int/" target="_blank">European Space Agency</a>.</p>
 
 
-      <div *ngIf="settings$|async as settings" class="card news card-body">
-        <div *ngIf="settings[0].feed_link">
+      <div *ngIf="settings$|async as settings">
+        <div *ngIf="settings[0].feed_link" class="news card-body">
           <h4 class="featurette-heading"> Share with us your <span class="text-muted">opinion</span> </h4>
 
             If you think we could improve something or you see a missing functionality, please let us know using
