--- a/UI/src/app/modules/user-file-upload/user-file-upload.component.scss
+++ b/UI/src/app/modules/user-file-upload/user-file-upload.component.scss
@@ -7,6 +7,6 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 button{
-  margin-left: -20px;
+  //margin-left: -20px;
   width: 15rem;
 }
