--- a/UI/src/app/modules/user-file-upload/user-file-upload.component.scss
+++ b/UI/src/app/modules/user-file-upload/user-file-upload.component.scss
@@ -7,6 +7,14 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 button{
-  //margin-left: -20px;
   width: 15rem;
+}
+.label-button{
+  font-size: 1.2rem;
+  line-height: 1rem;
+  height: 2.25rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
