help page updated - added a section for used data standard

--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -7,6 +7,7 @@
     <a pageScroll="" [pageScrollDuration]="1" href="#publishing">Publishing</a><br/>
     <a pageScroll="" [pageScrollDuration]="1" href="#published">Published Validations Page</a><br/>
     <a pageScroll="" [pageScrollDuration]="1" href="#comparison">Validation Comparison</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#file-standard">User Data File</a><br/>
   </p>
 
   <a id="manual"></a>
@@ -142,8 +143,10 @@
     <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed and temporal matching
     window size.
     The only accepted date format for the validation period is: YYYY-MM-DD. It is also possible to choose a date from
-    a calendar, available when clicking the date input field.     By default, the date range is determined through temporal matching of the data and reference selected.
-    If the validation period fields are left empty, the validation will not be started.  For the time range covered by the various
+    a calendar, available when clicking the date input field. By default, the date range is determined through temporal
+    matching of the data and reference selected.
+    If the validation period fields are left empty, the validation will not be started. For the time range covered by
+    the various
     datasets, see the <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">datasets page</a>.
     <br>
 
@@ -604,8 +607,12 @@
     If that is the case the user is advised to run smaller (in terms of spatial subsetting) validations and compare them
     one more time.
   </p>
+  <a id="file-standard"></a>
+  <h1 class="h3 mb-3 font-weight-normal">User Data File</h1>
 
-
+  <p>
+  Here we will provide information about the file standard for our users.
+  </p>
   <qa-scroll-to-top></qa-scroll-to-top>
 </main>
 
