work around added to add scroll-to-section option

--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -1,4 +1,4 @@
-<main>
+<main #helpPage>
   <h1 class="h3 p-mb-3 font-weight-normal">Go to section</h1>
   <p>
     <a pageScroll="" [pageScrollDuration]="1" href="#validation">Validate Page</a><br/>
@@ -607,6 +607,7 @@
     If that is the case the user is advised to run smaller (in terms of spatial subsetting) validations and compare them
     one more time.
   </p>
+
   <a id="file-standard"></a>
   <h1 class="h3 mb-3 font-weight-normal">User Data File</h1>
 
