--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
@@ -9,23 +9,21 @@
       <div class="p-col-2 p-sm-2">
         <input type="file" class="file-input"
                (change)="onFileSelected($event)" #fileUpload>
-<!--        <div class="p-fluid label">-->
-<!--          {{fileName || "No file uploaded yet."}}-->
-          <span class="label-button">{{fileName || "No file uploaded yet."}}</span>
-<!--        </div>-->
+        <span class="label-button">{{fileName || "No file chosen yet."}}</span>
       </div>
       <div class="p-col-2 p-sm-1">
         <div class="p-fluid">
           <button pButton
                   label="Select file"
-                  (click)="fileUpload.click()">
+                  (click)="dialogVisible=true">
+            <!--                  (click)="fileUpload.click()">-->
           </button>
         </div>
       </div>
       <div class="p-col-2 p-sm-1">
         <div class="p-fluid">
           <button pButton
-                  [disabled]="!file"
+                  [disabled]="!file || !userDataForm.valid"
                   label="Upload file"
                   (click)="sendFile()">
           </button>
@@ -35,4 +33,117 @@
   </div>
 
 </div>
+
+<p-dialog id="user-data-form" header="Upload your own data" position="botton" [(visible)]="dialogVisible">
+  <div class="p-pb-3 p-pl-0">You can upload your own data using this form. Please follow this file <a target="_blank"
+                                                                                                      [routerLink]="['/help', {pageSec: 'file-standard'}]">standard</a>
+  </div>
+  <div class="p-grid" style="display: flex">
+    <div class="center p-col">
+      <form [formGroup]="userDataForm" (ngSubmit)="onSubmit()">
+        <div class="p-py-3">
+        <span class="p-float-label">
+          <input class="form-field" id="dataset-name" type="text" pInputText formControlName="dataset_name">
+          <label for="dataset-name">Dataset name</label>
+          <span pTooltip="Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only."
+                class="pi pi-question-circle">
+          </span>
+        </span>
+          <!--        <div *ngIf="formErrors && formErrors.username"-->
+          <!--             class="alert">-->
+          <!--          <span *ngFor="let error of formErrors.username">{{error.message}}<br></span>-->
+          <!--        </div>-->
+        </div>
+
+        <div class="p-py-3">
+        <span class="p-float-label">
+          <input class="form-field" id="version-name" type="text" pInputText formControlName="version_name">
+          <label for="version-name">Version name</label>
+          <span pTooltip="Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only."
+                class="pi pi-question-circle">
+          </span>
+        </span>
+          <!--        <div *ngIf="formErrors && formErrors.username"-->
+          <!--             class="alert">-->
+          <!--          <span *ngFor="let error of formErrors.username">{{error.message}}<br></span>-->
+          <!--        </div>-->
+        </div>
+
+        <div class="p-py-3">
+          <div class="p-float-label">
+            <p-dropdown class="form-field"
+                        [options]="variableOptions"
+                        [style]="{'width':'15rem', 'height': '2.5rem'}"
+                        formControlName="variable_name"
+                        optionLabel="name"
+                        optionValue="query_name"
+                        placeholder=" "
+                        ngDefaultControl>
+            </p-dropdown>
+            <label>Variable name</label>
+            <span pTooltip="Required. If you choose 'From file', the value will be retrieved from the data file."
+                  [ngClass]="{'pi pi-question-circle': true, 'verticalAlign': this.userDataForm.controls.variable_name.value==''}"
+                  id="variableHelp">
+          </span>
+          </div>
+        </div>
+
+        <div class="p-py-3">
+            <span class="p-float-label">
+              <input class="form-field" id="variable-units" type="text" pInputText
+                     formControlName="variable_units">
+              <label for="variable-units">Units (optional) </label>
+              <span pTooltip="Optional."
+                    class="pi pi-question-circle">
+              </span>
+            </span>
+          <!--        <div *ngIf="formErrors && formErrors.username"-->
+          <!--             class="alert">-->
+          <!--          <span *ngFor="let error of formErrors.username">{{error.message}}<br></span>-->
+          <!--        </div>-->
+        </div>
+
+
+        <div class="p-py-3">
+          <div class="p-float-label">
+            <p-dropdown class="form-field"
+                        [options]="dimensionOptions"
+                        [style]="{'width':'15rem', 'height': '2.5rem'}"
+                        formControlName="dimension_name"
+                        optionLabel="name"
+                        optionValue="query_name"
+                        placeholder=" "
+                        ngDefaultControl>
+            </p-dropdown>
+            <label>Variable name</label>
+            <span pTooltip="Required. If you choose 'From file', the value will be retrieved from the data file."
+                  [ngClass]="{'pi pi-question-circle': true, 'verticalAlign': this.userDataForm.controls.dimension_name.value==''}"
+                  id="dimensionHelp">
+          </span>
+          </div>
+        </div>
+
+        <span class="label-button">{{fileName || "No file chosen yet."}}</span>
+
+        <div class="form-field">
+          <button pButton
+                  label="Add file"
+                  (click)="fileUpload.click()">
+          </button>
+        </div>
+
+        <div class="form-field">
+          <button pButton
+                  type="submit"
+                  label="Save"
+                  [disabled]="!userDataForm.valid">
+          </button>
+
+        </div>
+
+
+      </form>
+    </div>
+  </div>
+</p-dialog>
 
