--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.scss
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.scss
@@ -18,3 +18,40 @@ button{
   align-items: center;
   text-align: center;
 }
+
+.center h1{
+  text-align: left;
+  justify-content: center;
+}
+.form-field{
+  width: 15rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
+}
+//.form-small-field{
+//  width: 10rem;
+//  height: 2.5rem;
+//  margin-right: 0.5rem;
+//}
+.p-float-label{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 16px;
+}
+button{
+  width: 15rem;
+}
+div.alert{
+  margin-top: 1rem;
+}
+.alert{
+  background-color: #FF6C5C26;
+  color: #FF6C5C;
+  width: 15rem;
+  border: #FF6C5C30 solid 1px;
+  border-radius: 3px;
+  padding: 0.5rem;
+}
+.verticalAlign{
+  vertical-align: 85%;
+}
+
