--- a/UI/src/app/pages/my-datasets/my-datasets.component.html
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.html
@@ -1,8 +1,8 @@
 <main>
   <div class="center">
-<!--    <div class="p-col-9 p-text-center">-->
-      <h1>My datasets</h1>
-<!--    </div>-->
+    <!--    <div class="p-col-9 p-text-center">-->
+    <h1>My datasets</h1>
+    <!--    </div>-->
   </div>
   <hr class="featurette-divider">
 
@@ -10,18 +10,20 @@
     <qa-user-file-upload></qa-user-file-upload>
   </div>
   <hr class="featurette-divider">
-  <div *ngIf="(userDatasets$ | async) as userDatasetList; else noData"  class="container p-mb-5 p-mt-4" style="max-width: 80rem;">
-    <qa-user-dataset-list [userDatasetList]="userDatasetList"></qa-user-dataset-list>
-  </div>
-  <ng-template #noData>
-    <div class="p-text-center">
+  <div *ngIf="(userDatasets$ | async) as userDatasetList">
+    <div *ngIf="userDatasetList.length != 0" class="container p-mb-5 p-mt-4" style="max-width: 80rem;">
+      <qa-user-dataset-list [userDatasetList]="userDatasetList"></qa-user-dataset-list>
+    </div>
+
+    <div *ngIf="userDatasetList.length == 0" class="p-text-center">
       <div class="center">
-        <p  class="lead text-muted">
+        <p class="lead text-muted">
           You have not uploaded any data yet. Click the 'Upload file' button to add your own data.
         </p>
       </div>
     </div>
-  </ng-template>
+  </div>
+
 
 
 </main>
