a button added to run some tests on the uploaded file; instead of passing formData, only the file is passed, what fixes the problem with opening uploaded netCDF

--- a/UI/src/app/modules/user-datasets/components/user-dataset-list/user-dataset-list.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-dataset-list/user-dataset-list.component.html
@@ -26,6 +26,15 @@
                 (click)="removeDataset(userDataset.id)">
         </button>
       </td>
+      <td>
+        <button pButton
+                type="button"
+                label="Run dataset"
+                pTooltip="This is a temporal button for testing uploaded data"
+                class="p-button"
+                (click)="testDataset(userDataset.id)">
+        </button>
+      </td>
     </tr>
     </tbody>
   </table>
