some code commented as it's only for testing purposes

--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
@@ -29,8 +29,21 @@
           </button>
         </div>
       </div>
+<!--      <div class="p-col-2 p-sm-1">-->
+<!--        <div class="p-fluid">-->
+<!--          <button pButton-->
+<!--                  [disabled]="!file"-->
+<!--                  label="Test file"-->
+<!--                  (click)="testFile()">-->
+<!--          </button>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
   </div>
+<!--  <div>-->
+<!--    <h3>File Content</h3>-->
+<!--    <pre> {{fileContent}} </pre>-->
+<!--  </div>-->
 
 </div>
 
@@ -172,15 +185,6 @@
           </span>
           </div>
         </div>
-
-        <!--        <span class="label-button">{{fileName || "No file chosen yet."}}</span>-->
-
-        <!--        <div class="form-field">-->
-        <!--          <button pButton-->
-        <!--                  label="Add file"-->
-        <!--                  (click)="fileUpload.click()">-->
-        <!--          </button>-->
-        <!--        </div>-->
 
         <div class="form-field">
           <button pButton
